<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/nav_item1"
      android:title="@string/draw_color">
    <menu>
      <item
          android:id="@+id/nav_color_1"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_color"
          />
      <item
          android:id="@+id/nav_color_2"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_rgb"
          />
      <item
          android:id="@+id/nav_color_3"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_argb"
          />
    </menu>
  </item>
  <item
      android:id="@+id/nav_item2"
      android:title="@string/draw_basic_shape">
    <menu>
      <item
          android:id="@+id/nav_shape_1"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_point"
          />
      <item
          android:id="@+id/nav_shape_2"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_line"
          />
      <item
          android:id="@+id/nav_shape_3"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_rect"
          />
      <item
          android:id="@+id/nav_shape_4"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_round_rect"
          />
      <item
          android:id="@+id/nav_shape_5"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_oval"
          />
      <item
          android:id="@+id/nav_shape_6"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_circle"
          />
      <item
          android:id="@+id/nav_shape_7"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_arc"
          />
    </menu>
  </item>
  <item
      android:id="@+id/nav_item3"
      android:title="@string/draw_image"
      >
    <menu>
      <item
          android:id="@+id/nav_image_1"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_bitmap"
          />
      <item
          android:id="@+id/nav_image_2"
          android:icon="@mipmap/ic_keyboard_arrow_right_black_18dp"
          android:title="@string/draw_picture"
          />
    </menu>
  </item>
</menu>